--- a/buildSrc/gradle.properties
+++ b/buildSrc/gradle.properties
@@ -1,2 +1,5 @@
 #VERSION_NAME=1.1.0-SNAPSHOT
-VERSION_NAME=1.1.0
+VERSION_NAME=1.0.0
+local = false
+SONATYPE_USERNAME=zhangzhenli
+SONATYPE_PASSWORD=
