--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -2,16 +2,15 @@ apply plugin: 'groovy'
 
 repositories {
     mavenLocal()
-    maven {
-        url "http://192.168.108.60/nexus/content/groups/public/"
-    }
+//    maven {
+//        url "http://192.168.108.60/nexus/content/groups/public/"
+//    }
     jcenter()
 }
 
 dependencies {
     compile 'org.sonatype.plugins:jarjar-maven-plugin:1.9'
-    compile "com.android.tools.build:gradle:2.0.0-alpha3"
-    compile 'com.android.tools.build:transform-api:2.0.0-alpha3'
+    compile "com.android.tools.build:gradle:2.1.2"
     compile 'org.apache.commons:commons-lang3:3.4'
     compile gradleApi()
     compile localGroovy()
